tests/paczka1/small_fuzzy/23564504.err
Error in line 5: jZ8cfSi A487 67,0
Error in line 3: xLimvssX6H S395 82,6
